@@ -174,7 +174,7 @@ public class MapPanel extends JComponent implements MouseMotionListener, MouseWh
             String className = XMLUtil.getAttr(node, "Class", "");
             if (!className.isEmpty()) {
                 Class cl = Class.forName(className);
-                Object o = cl.newInstance();
+                Object o = cl.getDeclaredConstructor().newInstance();
 
                 if (o instanceof MapLayer) {
                     return (MapLayer) o;
@@ -597,12 +597,12 @@ public class MapPanel extends JComponent implements MouseMotionListener, MouseWh
         int dx = e.getX() - lastEvent.getX();
         int dy = e.getY() - lastEvent.getY();
 
-        int bothDown = (MouseEvent.BUTTON1_MASK | MouseEvent.BUTTON3_MASK);
+        int bothDown = (MouseEvent.BUTTON1_DOWN_MASK | MouseEvent.BUTTON3_DOWN_MASK);
 
-        if ((e.getModifiers() & bothDown) == bothDown) {
+        if ((e.getModifiersEx() & bothDown) == bothDown) {
             zoom(Math.pow(1.05, -dy), e);
         }
-        else if ((e.getModifiers() & MouseEvent.BUTTON3_MASK) == MouseEvent.BUTTON3_MASK) {
+        else if ((e.getModifiersEx() & MouseEvent.BUTTON3_DOWN_MASK) == MouseEvent.BUTTON3_DOWN_MASK) {
             pan(dx, dy);
         }
         else if (proj != null) {
@@ -633,7 +633,7 @@ public class MapPanel extends JComponent implements MouseMotionListener, MouseWh
             double lat = proj.getLat(e.getX(), e.getY());
             popupMenu.showMenu(e, lat, lon);
         }
-        else if ((e.getModifiers() & MouseEvent.BUTTON1_MASK) == MouseEvent.BUTTON1_MASK) {
+        else if ((e.getModifiersEx() & MouseEvent.BUTTON1_DOWN_MASK) == MouseEvent.BUTTON1_DOWN_MASK) {
             double lon = proj.getLon(e.getX(), e.getY());
             double lat = proj.getLat(e.getX(), e.getY());
             for (MapMouseListener l : mouseListeners) {
@@ -658,7 +658,7 @@ public class MapPanel extends JComponent implements MouseMotionListener, MouseWh
             double lat = proj.getLat(e.getX(), e.getY());
             popupMenu.showMenu(e, lat, lon);
         }
-        else if ((e.getModifiers() & MouseEvent.BUTTON1_MASK) == MouseEvent.BUTTON1_MASK) {
+        else if ((e.getModifiersEx() & MouseEvent.BUTTON1_DOWN_MASK) == MouseEvent.BUTTON1_DOWN_MASK) {
             double lon = proj.getLon(e.getX(), e.getY());
             double lat = proj.getLat(e.getX(), e.getY());
             for (MapMouseListener l : mouseListeners) {
@@ -698,7 +698,7 @@ public class MapPanel extends JComponent implements MouseMotionListener, MouseWh
             double lat = proj.getLat(e.getX(), e.getY());
             popupMenu.showMenu(e, lat, lon);
         }
-        else if ((e.getModifiers() & MouseEvent.BUTTON2_MASK) == MouseEvent.BUTTON2_MASK && proj != null) {
+        else if ((e.getModifiersEx() & MouseEvent.BUTTON2_DOWN_MASK) == MouseEvent.BUTTON2_DOWN_MASK && proj != null) {
             pan(-e.getX() + getWidth() / 2, -e.getY() + getHeight() / 2);
 
         }
